<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="title_activity_username">UsernameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_otp_sent_your_phone_number">Enter your received OTP here</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>