<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".PhoneNumberActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:tint="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
        app:srcCompat="@drawable/ic_phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enter_phone_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhone" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:digits="0123456789"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="10"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_otp"
        android:textSize="16sp"
        android:textStyle="normal"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/ccp" />

    <ProgressBar
        android:id="@+id/progressBarSendOtp"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendOTP" />


</androidx.constraintlayout.widget.ConstraintLayout>